Fix issue - Z-index on text div should be bigger than next hotspot z-index and menu z-index.

--- a/company_website/static/how_we_work/partials/hotspot_styles.sass
+++ b/company_website/static/how_we_work/partials/hotspot_styles.sass
@@ -35,7 +35,7 @@
 
                 .show-tooltip
                     font-size: 14px
-                    z-index: 2
+                    z-index: 1200
 
                     .hotspot-description
                         bottom: 150%
@@ -83,32 +83,35 @@
                 left: 18%
                 animation: show 1s 1s 1
                 animation-fill-mode: forwards
-                
+                z-index: 1100
 
-            .sprint-planning
+            .hotspot.sprint-planning
                 top: 48.7%
                 left: 29%
                 animation: show 1s 1s 1
                 animation-fill-mode: forwards
+                z-index: 1200
 
             .sprint-backlog
                 top: 32.5%
                 left: 38.6%
                 animation: show 1s 1.2s 1
                 animation-fill-mode: forwards
+                z-index: 1100
 
             .sprint-retrospective
                 top: 32.5%
                 left: 50.3%
                 animation: show 1s 1.3s 1
                 animation-fill-mode: forwards
+                z-index: 1101
 
             .scrum-team
                 top: 93.7%
                 left: 56.5%
                 animation: show 1s 1.4s 1
                 animation-fill-mode: forwards
-                z-index: 1500
+                z-index: 1103
 
                 @media only screen and (max-width: $md-screen-size)
                     top: 89%
@@ -118,18 +121,21 @@
                 left: 67.7%
                 animation: show 1s 1.4s 1
                 animation-fill-mode: forwards
+                z-index: 1101
 
             .sprint-review
                 top: 48.7%
                 left: 77%
                 animation: show 1s 1.5s 1
                 animation-fill-mode: forwards
+                z-index: 1103
 
             .increment
                 top: 43.9%
                 left: 95.5%
                 animation: show 1s 1.6s 1
                 animation-fill-mode: forwards
+                z-index: 1100
 
             .pulse
                 width: 24px
